--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Love Calculator</title>
+    <title>Falmes</title>
 
     <link rel="stylesheet" href="app.css">
     <script src="app.js" defer></script>
@@ -24,6 +24,15 @@
             <!-- <p>are</p> -->
             <span id="result">Friends</span>
         </div>
+    </div>
+    <div class="ad">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <!-- flames_ad -->
+        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-4796156790640535" data-ad-slot="9423549017"
+            data-ad-format="auto" data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
     </div>
 
 
