--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 
     <link rel="stylesheet" href="app.css">
     <script src="app.js" defer></script>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-4796156790640535",
+            enable_page_level_ads: true
+        });
+    </script>
 </head>
 
 <body>
