--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Falmes</title>
+    <link rel="shortcut icon" href="favicon.png">
 
     <link rel="stylesheet" href="app.css">
     <script src="app.js" defer></script>
@@ -21,7 +22,6 @@
         </form>
         <div class="result-box">
             <p>You are</p>
-            <!-- <p>are</p> -->
             <span id="result">Friends</span>
         </div>
     </div>
